grammar.js
    source_file: ($) => repeat($._top_level_item),

    // top level only bits
    _top_level_item: ($) =>
      choice(
        $.struct_definition,
        $.function_definition,
        $.declaration,
        $.non_case_statement,
        $.preproc,
      ),

    // preproc bits
    // partially taken then modified from:
    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias(/[^\\"\n]+/, $.string_content),
            $.escape_sequence,
          ),
        ),
        '"',
      ),
    escape_sequence: (_) =>
      token(prec(
        1,
        seq(
          "\\",
          choice(
            /[^xuU]/,
            /\d{2,3}/,
            /x[0-9a-fA-F]{1,4}/,
            /u[0-9a-fA-F]{4}/,
            /U[0-9a-fA-F]{8}/,
          ),
        ),
      )),

    preproc_arg: (_) => token(prec(-1, /\S([^/\n]|\/[^*]|\\\r?\n)*/)),
    preproc_include: ($) =>
      seq(
        "#include",
        field("path", $.string_literal),
        $.base_preproc_cond,
      ),
    preproc_define: ($) =>
      seq(
        "#define",
        field("name", $.identifier),
        field("value", optional($.preproc_arg)),
        $.base_preproc_cond,
      ),
    preproc_define_func: ($) =>
      seq(
        "#define",
        field("name", $.identifier),
        token.immediate("("),
        optional(comma_seperated_rule(repeat($.identifier))),
        ")",
        field("value", optional($.preproc_arg)),
        $.base_preproc_cond,
      ),
    precision_specifier: (_) =>
      choice(
        "highp",
        "mediump",
        "lowp",
      ),

    parameter_qualifier: (_) =>
      choice(
        "in",
        "out",
        "inout",
      ),

    scope: (_) => choice("global", "instance"),

    // common bits
    bool: (_) => choice("true", "false"),
    _any_integer: (_) => /[+-]?(?:0x[a-f0-9]+|\d+)/i,
    unsigned_integer: ($) =>
      seq($._any_integer, token.immediate(choice("u", "U"))),
    signed_integer: ($) => $._any_integer,
    float: (_) => /[+-]?(?:\d+\.|\.\d)\d*(?:e[+-]\d+)?f?/i,
    primitive_type: (_) =>
      /void|bool|u?int|float|(?:[biu]?vec|mat)[2-4]|[iu]?sampler(?:2D(Array)?|3D)|sampler(?:Cube(?:Array)?|ExternalOES)/,
    identifier: (_) => /(r#)?[_\p{XID_Start}][_\p{XID_Continue}]*/,
    unary_expression: ($) => {
      const operators = field("operator", choice("+", "-", "~", "!"));
      return prec.left(
        PREC.UNARY,
        seq(
          field("operator", operators),
          field("argument", $.expression),
        ),
      );
    },
    update_expression: ($) => {
      const operators = field("operator", choice("--", "++"));
      const arg = field("argument", $.expression);
      return choice(
        prec.left(PREC.UNARY, seq(operators, arg)),
        prec.right(PREC.POST_INC_DEC, seq(arg, operators)),
      );
    },

    assignment_expression: ($) =>
      prec.right(
        PREC.ARITHMETIC_ASSIGNMENT,
        seq(
          field("left", $.assignable_expression),
          field(
            "operator",
            choice(
              "=",
              "*=",
              "/=",
              "%=",
              "+=",
              "-=",
              "<<=",
              ">>=",
              "&=",
              "^=",
              "|=",
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.LOGICAL_INCLUSIVE_OR, "||"],
        [PREC.LOGICAL_EXCLUSIVE_OR, "^^"],
        [PREC.LOGICAL_AND, "&&"],
        [PREC.BITWISE_INCLUSIVE_OR, "|"],
        [PREC.BITWISE_EXCLUSIVE_OR, "^"],
        [PREC.BITWISE_AND, "&"],
        [PREC.EQUALITY, choice("!=", "==")],
        [
          PREC.RELATIONAL,
          choice("<", "<=", ">", ">="),
        ],
        [PREC.BITWISE_SHIFT, choice("<<", ">>")],
        [PREC.ADDITIVE, choice("+", "-")],
        [PREC.MULTIPLICATIVE, choice("*", "/", "%")],
      ];

      return prec.left(choice(
        ...table.map(
          ([precedence, rule]) =>
            prec.left(
              precedence,
              seq(
                field("left", $.expression),
                field("operator", rule),
                field("right", $.expression),
              ),
            ),
        ),
      ));
    },

    parenthical_expression: ($) =>
      prec(PREC.PARENTHICAL_GROUP, seq("(", $.expression, ")")),
    subscript_expression: ($) =>
      prec(
        PREC.ARRAY_SUBSCRIPT,
        seq(
          field("argument", $.expression),
          "[",
          field("index", $.expression),
          "]",
        ),
      ),

    field_expression: ($) =>
      prec(
        PREC.STRUCTURE_FIELD,
        seq(
          field("argument", $.expression),
          repeat1(seq(field("operator", "."), field("field", $.identifier))),
        ),
      ),
    argument_list: ($) =>
      seq("(", optional(comma_seperated_rule($.expression)), ")"),
    call_expression: ($) =>
      prec(
        PREC.FUNCTION_CALL,
        seq(
          // NOTE: find better way to add array constructor support as this add a bunch of conflicts
          prec.right(
            seq(
              field("function", choice($.primitive_type, $.identifier)),
              field("size", repeat(seq("[", $.expression, "]"))),
            ),
          ),
          field("arguments", $.argument_list),
        ),
      ),

    method_expression: ($) =>
      prec.left(
        PREC.METHOD_CALL,
        seq(
          field("argument", $.expression),
          field("operator", "."),
          field("method", $.identifier),
          field("arguments", $.argument_list),
        ),
      ),

    // Comma expressions are only supported under specific contexts so just
    // use choice(comma_expr, expr) instead where needed
    //
    // TODO: add method expressions for array.length() parsing
    compound_statement: ($) => seq("{", repeat($.block_item), "}"),
    expression_statement: ($) => seq(optional($.expression), ";"),
    field_definition: ($) => $._non_top_level_many_declarator,
    struct_fields: ($) => seq("{", repeat(seq($.field_definition, ";")), "}"),
    struct_definition: ($) =>
      seq(
        "struct",
        field("name", $.identifier),
        field("fields", $.struct_fields),
        ";",
      ),
    _type_spec: ($) =>
      seq(
        field("precision", optional($.precision_specifier)),
        field("type", $.type),
      ),
    _non_top_level_many_declarator: ($) =>
      seq(
        $._type_spec,
        comma_seperated_rule($.declarator),
      ),
    _comma_seperated_decl: ($) =>
      comma_seperated_rule(
        choice(field("declarator", $.init_declarator), $.declarator),
      ),
    type_hint: ($) =>
      seq(field("operator", ":"), choice($.identifier, $.call_expression)),
    const_declaration: ($) =>
      seq(
        field("qualifier", "const"),
        $._type_spec,
        $._comma_seperated_decl,
        ";",
      ),
    uniform_declaration: ($) =>
      seq(
        field("scope", optional($.scope)),
        field("qualifier", "uniform"),
        $._type_spec,
        $._comma_seperated_decl,
        ";",
      ),
    variable_declaration: ($) =>
      seq($._type_spec, $._comma_seperated_decl, ";"),
    group_uniforms_declarator: ($) =>
      seq(
        field("group", $.identifier),
        optional(seq(".", field("subgroup", $.group_uniforms_declarator))),
      ),
    group_uniforms_declaration: ($) =>
      seq(
        "group_uniforms",
        field("declarator", optional($.group_uniforms_declarator)),
        ";",
      ),
    init_declarator: ($) =>
      seq(
        field("declarator", $._declarator_item),
        field("hint", optional($.type_hint)),
        field("operator", "="),
        field("value", $.initializer),
      ),
    _declarator_item: ($) => choice($.identifier, $.array_declarator),
    array_declarator: ($) =>
      seq(
        field("declarator", $._declarator_item),
        repeat1(seq("[", field("size", $.expression), "]")),
      ),
    initializer_list: ($) =>
      seq("{", comma_seperated_trailing_rule($.expression), "}"),

    parameter_declaration: ($) =>
      seq(
        field("parameter_qualifier", optional($.parameter_qualifier)),
        seq(
          $._type_spec,
          $.declarator,
        ),
      ),
    parameter_list: ($) =>
      seq(
        "(",
        optional(
          comma_seperated_rule(
            $.parameter_declaration,
          ),
        ),
        ")",
      ),

    type_specifier: ($) =>
      seq(
        field("type", $._type_spec),
        repeat(seq("[", field("size", $.expression), "]")),
      ),
    function_definition: ($) =>
      seq(
        field("type", $.type_specifier),
        field("declarator", $.identifier),
        field("parameters", $.parameter_list),
        field("block", $.compound_statement),
      ),
    // from: https://github.com/tree-sitter/tree-sitter-c/blob/ae19b676b13bdcc13b7665397e6d9b14975473dd/grammar.js#L1361
