test/corpus/declaration.txt
===
Primitive
===
int var;
uint var2;
float var3;
vec2 var4;
sampler2D var5;
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier))
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier))
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier))
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier))
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier)))

===
Primitive Initialized Decimal Int
===
int var = 1434;
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))))

===
Primitive Initialized Hexadecimal Int
===
int var = 0xDEADBEEF;
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))))

===
Primitive Initialized Invalid Hexadecimal Int
:error
===
int var = 0x1DEAzBEEx;
---



===
Primitive Multiple Declarators
===
int v, a = 2, r = 1;
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier)
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))))

===
Primitive Array Declarator
===
int var[MY_VALUE] = {1, 2};
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (array_declarator
        declarator: (identifier)
        size: (identifier))
      value: (initializer_list
        (signed_integer)
        (signed_integer)))))

===
Primitive Array Declarators
===
int a, b, c[3] = {1, 2, 3}, d[2] = {14, 23}, z = 1;
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (identifier)
    declarator: (identifier)
    declarator: (init_declarator
      declarator: (array_declarator
        declarator: (identifier)
        size: (signed_integer))
      value: (initializer_list
        (signed_integer)
        (signed_integer)
        (signed_integer)))
    declarator: (init_declarator
      declarator: (array_declarator
        declarator: (identifier)
        size: (signed_integer))
      value: (initializer_list
        (signed_integer)
        (signed_integer)))
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))))

===
Primitive Boolean
===
bool myval = false;
---

(source_file
  (variable_declaration
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (identifier)
      value: (bool))))

===
Function
===
void empty() {}
---

(source_file
  (function_definition
    type: (type_specifier
      type: (primitive_type))
    declarator: (identifier)
    parameters: (parameter_list)
    block: (compound_statement)))

===
Function Array Returned
===
int[3][4] func() {}
---

(source_file
  (function_definition
    type: (type_specifier
      type: (primitive_type)
      size: (signed_integer)
      size: (signed_integer))
    declarator: (identifier)
    parameters: (parameter_list)
    block: (compound_statement)))

===
Function Parameter Qualifier
===
int[3] my_func(in int a, out uint b, inout lowp float c) {}
---

(source_file
  (function_definition
    type: (type_specifier
      type: (primitive_type)
      size: (signed_integer))
    declarator: (identifier)
    parameters: (parameter_list
      (parameter_declaration
        parameter_qualifier: (parameter_qualifier)
        type: (primitive_type)
        declarator: (identifier))
      (parameter_declaration
        parameter_qualifier: (parameter_qualifier)
        type: (primitive_type)
        declarator: (identifier))
      (parameter_declaration
        parameter_qualifier: (parameter_qualifier)
        precision: (precision_specifier)
        type: (primitive_type)
        declarator: (identifier)))
    block: (compound_statement)))

===
Empty Struct
===
struct Empty  {};
---

(source_file
  (struct_definition
    name: (identifier)
    fields: (struct_fields)))

===
Struct With Fields
===
struct WithFields {
  int my_field, other_field[4];
  lowp float a[3], b[6];
};
---

(source_file
  (struct_definition
    name: (identifier)
    fields: (struct_fields
      (field_definition
        type: (primitive_type)
        declarator: (identifier)
        declarator: (array_declarator
          declarator: (identifier)
          size: (signed_integer)))
      (field_definition
        precision: (precision_specifier)
        type: (primitive_type)
        declarator: (array_declarator
          declarator: (identifier)
          size: (signed_integer))
        declarator: (array_declarator
          declarator: (identifier)
          size: (signed_integer))))))

===
Const Declaration
===
const float A[32]: my_hint = 1;
---

(source_file
  (const_declaration
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (array_declarator
        declarator: (identifier)
        size: (signed_integer))
      hint: (type_hint
        (identifier))
      value: (signed_integer))))

===
Const Declaration Many
===
const lowp vec2 Z[1]: my_hint, Y = 12313, Z: my_hint_func(1,2) = 123123;
---

(source_file
  (const_declaration
    precision: (precision_specifier)
    type: (primitive_type)
    declarator: (array_declarator
      declarator: (identifier)
      size: (signed_integer))
    hint: (type_hint
      (identifier))
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))
    declarator: (init_declarator
      declarator: (identifier)
      hint: (type_hint
        (call_expression
          function: (identifier)
          arguments: (argument_list
            (signed_integer)
            (signed_integer))))
      value: (signed_integer))))

===
Uniform Declaration
===
uniform lowp vec4 Z: type_hint = vec4(123);
---

(source_file
  (uniform_declaration
    precision: (precision_specifier)
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (identifier)
      hint: (type_hint
        (identifier))
      value: (call_expression
        function: (primitive_type)
        arguments: (argument_list
          (signed_integer))))))

===
Uniform Declaration Many
===
uniform vec3 ZAZA: hint, ZEZE: other_hint(), ZXZX = 123;
---

(source_file
  (uniform_declaration
    type: (primitive_type)
    declarator: (identifier)
    hint: (type_hint
      (identifier))
    declarator: (identifier)
    hint: (type_hint
      (call_expression
        function: (identifier)
        arguments: (argument_list)))
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))))

===
Uniform Declaration Scoped
===
global uniform int my_thing = 1;
instance uniform int my_thing = 1;
---

(source_file
  (uniform_declaration
    scope: (scope)
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer)))
  (uniform_declaration
    scope: (scope)
    type: (primitive_type)
    declarator: (init_declarator
      declarator: (identifier)
      value: (signed_integer))))

===
Group Uniforms
===
group_uniforms GroupA.GroupB;
---

(source_file
  (group_uniforms_declaration
    declarator: (group_uniforms_declarator
      group: (identifier)
      subgroup: (group_uniforms_declarator
        group: (identifier)))))

===
Group Uniforms No Groups
===
group_uniforms;
---

(source_file
  (group_uniforms_declaration))
