test/corpus/expression.txt
===
Pre Increment
===
++a;
---

(source_file
  (expression_statement
    (update_expression
      argument: (identifier))))

===
Post Increment
===
a++;
---

(source_file
  (expression_statement
    (update_expression
      argument: (identifier))))

===
Pre Decrement
===
--a;
---

(source_file
  (expression_statement
    (update_expression
      argument: (identifier))))

===
Post Decrement
===
a--;
---

(source_file
  (expression_statement
    (update_expression
      argument: (identifier))))

===
Logical OR
===
a || b;
---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (identifier))))

===
Logical AND
===
a && b;
---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (identifier))))

===
Logical Negation
===
!a;
---

(source_file
  (expression_statement
    (unary_expression
      argument: (identifier))))

===
Logical Mix
===
a && b && c || !d;
---

(source_file
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier))
      right: (unary_expression
        argument: (identifier)))))

===
Bitwise OR
===
a | 2;
---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (signed_integer))))

===
Bitwise AND
===
a & 3;
---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (signed_integer))))

===
Assign
===
a = b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Add
===
a += b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Sub
===
a -= b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Mult
===
a *= b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Div
===
a /= b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Mod
===
a %= b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Left Shift
===
a <<= b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assign Right Shift
===
a >>= b;
---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (identifier))))

===
Arithmetic Assing Mixed Shift
:error
===
a <>= b;
---



===
Arithmetic Assing Mixed Shift Reverse
:error
===
a ><= b;
---



===
Field Access
===
a.b++;
---

(source_file
  (expression_statement
    (update_expression
      argument: (field_expression
        argument: (identifier)
        field: (identifier)))))

===
Subscript
===
a[(1 + 3)];
---

(source_file
  (expression_statement
    (subscript_expression
      argument: (identifier)
      index: (parenthical_expression
        (binary_expression
          left: (signed_integer)
          right: (signed_integer))))))

===
Field Access and Subscript
===
a.b[3].c;
---

(source_file
  (expression_statement
    (field_expression
      argument: (subscript_expression
        argument: (field_expression
          argument: (identifier)
          field: (identifier))
        index: (signed_integer))
      field: (identifier))))

===
Call Empty
===
my_func();
---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (argument_list))))

===
Call With Arguments
===
my_func(1, 2+3, b-c);
---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (argument_list
        (signed_integer)
        (binary_expression
          left: (signed_integer)
          right: (signed_integer))
        (binary_expression
          left: (identifier)
          right: (identifier))))))

===
Constructor Function
===
vec2[24][2](1.0, 2.0);
---

(source_file
  (expression_statement
    (call_expression
      function: (primitive_type)
      size: (signed_integer)
      size: (signed_integer)
      arguments: (argument_list
        (float)
        (float)))))

===
Method Call Empty
===
value.method();
---

(source_file
  (expression_statement
    (method_expression
      argument: (identifier)
      method: (identifier)
      arguments: (argument_list))))

===
Method Call On Field
===
value.my_field.method();
---

(source_file
  (expression_statement
    (method_expression
      argument: (field_expression
        argument: (identifier)
        field: (identifier))
      method: (identifier)
      arguments: (argument_list))))

===
Method Call With Arguments
===
value.my_method(1, 2);
---

(source_file
  (expression_statement
    (method_expression
      argument: (identifier)
      method: (identifier)
      arguments: (argument_list
        (signed_integer)
        (signed_integer)))))

===
Mix
===
(c =++a.b) << 2 & 3 * 2 >> 2+1;
---

(source_file
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (parenthical_expression
          (assignment_expression
            left: (identifier)
            right: (update_expression
              argument: (field_expression
                argument: (identifier)
                field: (identifier)))))
        right: (signed_integer))
      right: (binary_expression
        left: (binary_expression
          left: (signed_integer)
          right: (signed_integer))
        right: (binary_expression
          left: (signed_integer)
          right: (signed_integer))))))

===
Precedence Check
===
(1 < 3 | 3U);
---

(source_file
  (expression_statement
    (parenthical_expression
      (binary_expression
        left: (binary_expression
          left: (signed_integer)
          right: (signed_integer))
        right: (unsigned_integer)))))
