test/corpus/preproc.txt
===
Include Straight
===
#include "my_secret_path"
---

(source_file
  (preproc_include
    path: (string_literal
      (string_content))))

===
Include Split
===
#include \
"my_secret_path"
---

(source_file
  (preproc_include
    path: (string_literal
      (string_content))))

===
Include Split Many
===
#include \
\
"my_secret_path"
---

(source_file
  (preproc_include
    path: (string_literal
      (string_content))))

===
Include Split From Path
===
#include "my_secret_\
path"
---

(source_file
  (preproc_include
    path: (string_literal
      (string_content)
      (escape_sequence)
      (string_content))))

===
Include Split From Path Many
===
#include "my_\
secret_pa\
th"
---

(source_file
  (preproc_include
    path: (string_literal
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content))))

===
Define Empty
===
#define Hello
---

(source_file
  (preproc_define
    name: (identifier)))

===
Define With Tokens
===
#define Hello ashdaksh \
askhdaskhd
---

(source_file
  (preproc_define
    name: (identifier)
    value: (preproc_arg)))

===
Define Function Macro No Args
===
#define Hello() my thin\
g
---

(source_file
  (preproc_define_func
    declarator: (identifier)
    value: (preproc_arg)))
